--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Best Buy</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://db.onlinewebfonts.com/c/f394894fe9d2c0473c80ab24dd9bcda5?family=Human+BBY+Web" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
