updating home page

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         d="M7.25 15c-.34 0-.64-.23-.73-.57L3.9 3.95A1.25 1.25 0 0 0 2.69 3h-.94C1.34 3 1 2.66 1 2.25s.34-.75.75-.75h.94c1.26 0 2.36.86 2.67 2.08l2.62 10.49a.748.748 0 0 1-.73.93">
                     </path>
                 </svg>
-                <span class="text-white hover:underline cursor-pointer">Cart</span>
+                <span class="text-white hover:underline cursor-pointer"> <a href="/cart1.html">Cart</a></span>
             </div>
         </nav>
         <!-- nav Links -->
@@ -210,7 +210,7 @@
             <li class="hover:underline">Holiday Deals</li>
             <li class="hover:underline">Gifts cards</li>
             <li class="hover:underline">gift ideas</li>
-            <li class="hover:underline">top deals</li>
+            <li class="hover:underline"><a href="/topDeals.html">top deals</a></li>
             <li class="hover:underline">deal of the day</li>
             <li class="hover:underline">Yes, best buy sells that </li>
             <li class="hover:underline">my best memberships</li>
@@ -945,7 +945,7 @@
   
               <li class="splide__slide">
                 <div
-                  class="cards border h-[298px] w-[168px] flex items-center justify-center rounded-md border"
+                  class="cards h-[298px] w-[168px] flex items-center justify-center rounded-md border"
                 >
                   <div class="components-div flex flex-col h-[242px] w-[134px]">
                     <div class="mb-[8px]">
